carga el dataset

--- a/Sarima.ipynb
+++ b/Sarima.ipynb
@@ -9,8 +9,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Realizado por: Luis Rendón  <br>\n",
+    "Fecha: DIC/2022"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importación de librerias necesarias"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cargar el Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -27,8 +59,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "# Specify the path to your Excel file\n",
     "file_path = \"https://github.com/huambra/Predicting-Shrimp-Exports/raw/refs/heads/main/Exports%20por%20Mercado.xlsx\"\n",
     "\n",
