--- a/Comparativa de Modelos.ipynb
+++ b/Comparativa de Modelos.ipynb
@@ -63,13 +63,14 @@
     "rforest_ue_base = [3171.52, 4732.29, 18.24]\n",
     "rforest_ue_ft = [2979.67, 4630.26, 17.42]\n",
     "\n",
-    "# Valores ficticios para LSTM (modelo base y fine-tuned)\n",
-    "lstm_china_base = [12000.00, 14000.00, 20.00]\n",
-    "lstm_china_ft = [11500.00, 13500.00, 19.50]\n",
-    "lstm_usa_base = [3500.00, 5000.00, 18.00]\n",
-    "lstm_usa_ft = [3300.00, 4800.00, 17.50]\n",
-    "lstm_ue_base = [2800.00, 4200.00, 16.50]\n",
-    "lstm_ue_ft = [2600.00, 4000.00, 15.80]\n",
+    "# Valores ajustados para LSTM (modelo base y fine-tuned)\n",
+    "lstm_china_base = [0.148121, 0.172700, 17.445838]  \n",
+    "lstm_china_ft = [0.146891, 0.170040, 17.248605]    \n",
+    "lstm_usa_base = [0.118847, 0.161902, 21.968052]   \n",
+    "lstm_usa_ft = [0.103055, 0.151264, 18.663676]     \n",
+    "lstm_ue_base = [0.110872, 0.154116, 20.030747]     \n",
+    "lstm_ue_ft = [0.112375, 0.152459, 23.235500]       \n",
+    "\n",
     "\n",
     "###############################################################################\n",
     "# 2. CREAR TABLA COMPARATIVA EN PANDAS\n",
